--- a/styles/layout/scroll.css
+++ b/styles/layout/scroll.css
@@ -5,7 +5,7 @@
     -webkit-overflow-scrolling: touch;
     scrollbar-width: thin;
     scrollbar-color: #ccc transparent;
-    padding-bottom: 0.5rem;
+    margin-bottom: 4rem;
     margin-right: -1rem;
     margin-left: -1rem;
     padding-right: 1rem;
