--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,7 @@
 @import url('components/empty-state.css');
 @import url('components/menu.css');
 @import url('components/navigation.css');
+@import url('components/my-actions.css');
 
 /* Page Styles */
 @import url('pages/responsive.css');
