--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -4,15 +4,21 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Noto Sans Arabic", sans-serif;
+
+
+    /* Disable text selection */
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    background-color: #e8e8e8;
     color: #333;
     line-height: 1.6;
     padding-bottom: 80px;
-    /* Space for bottom navigation */
     direction: rtl;
     min-height: 110vh;
 }
