--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -11,6 +11,11 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+*:focus {
+    outline: none !important;
 }
 
 body {
