--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,7 @@
 @import url('components/menu.css');
 @import url('components/navigation.css');
 @import url('components/my-actions.css');
+@import url('components/settings.css');
 
 /* Page Styles */
 @import url('pages/responsive.css');
