--- a/styles/components/menu.css
+++ b/styles/components/menu.css
@@ -9,7 +9,7 @@
     top: 60px;
     left: 0;
     right: 0;
-    width: 100vw;
+    width: 100%;
     max-width: 100vw;
     z-index: 99;
     margin-top: 0;
