--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,9 @@
 @import url('components/navigation.css');
 @import url('components/my-actions.css');
 @import url('components/settings.css');
+@import url('components/user-fav.css');
+
+
 @import url('components/card-components.css');
 
 /* Page Styles */
