--- a/styles/pages/responsive.css
+++ b/styles/pages/responsive.css
@@ -15,7 +15,7 @@
     }
 
     .menu-item {
-        padding: 0.875rem;
+        padding: 0.6rem;
     }
 
     .menu-item-text {
@@ -51,7 +51,7 @@
     }
 
     .account-tab {
-        padding: var(--spacing-sm) var(--spacing-md);
+        padding: 0.6rem !important;
         font-size: var(--font-size-sm) !important;
     }
 
