--- a/styles/components/user-fav.css
+++ b/styles/components/user-fav.css
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     min-height: calc(100vh - 200px);
     text-align: center;
     gap: var(--spacing-lg);
