--- a/styles/pages/responsive.css
+++ b/styles/pages/responsive.css
@@ -76,7 +76,7 @@
     }
 
     .account-tabs-title {
-        font-size: var(--font-size-lg);
+        font-size: var(--font-size-sm);
     }
 
     .card-body {
