--- a/styles/components/settings.css
+++ b/styles/components/settings.css
@@ -232,7 +232,7 @@ body:has(#profile-settings-view.active) {
     .settings-content {
         height: calc(100vh - 50px - 75px);
         position: relative;
-        padding-bottom: calc(75px + var(--spacing-lg) + var(--spacing-xl));
+        padding-bottom: calc(100px + var(--spacing-2xl) + var(--spacing-2xl));
     }
 
     .settings-section-title {
